--- a/app/templates/webapp/src/html/app.html
+++ b/app/templates/webapp/src/html/app.html
@@ -54,7 +54,7 @@
     <!-- @VERSION -->
     <script>location.config={root:'./'};</script>
     <!-- @DEFINE -->
-    <script src="../3rd/nej/src/define.js?pro=../javascript/"></script>
+    <script src="../3rd/nej/src/define.js?pro=/src/javascript/"></script>
     <script>
       define(['{lib}util/dispatcher/dispatcher.2.js'],
       function(){
