--- a/app/templates/webapp/src/html/module/blog/list/test/test.htm
+++ b/app/templates/webapp/src/html/module/blog/list/test/test.htm
@@ -22,7 +22,7 @@
       
       <div class="g-bd">
         <div class="m-foot">
-            如有任何问题，请联系：蔡剑飞(<a href="mailto:caijf@corp.netease.com">caijf@corp.netease.com</a>)
+            如有任何问题，请联系：蔡剑飞()
         </div>
       </div>
       <div class="g-ft">
